html and css modified

--- a/index.html
+++ b/index.html
@@ -4,14 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year New Me</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-        
+    <header class="header-container">
+      <div class="title-container">
+        <h2 class="header-title">
+          All Thinks Are <br />
+          Possible If You <br />
+          believe
+        </h2>
+        <p class="header-para">
+          There are many variations of passages of Lorem Ipsum <br />
+          available, but the majority have suffered alteration in some <br />
+          form, by injected humour, or randomised words
+        </p>
+        <button class="header-button">Contact Us</button>
+      </div>
     </header>
     <nav></nav>
-    <main></main>
+    <main>
+      <section>
+        <div class="hero-section">
+          <div class="hero-section-left">
+            <img class="hero-image" src="images/person.png" alt="" />
+          </div>
+          <div class="hero-section-right">
+            <h4 class="hero-title">
+              My failures of <br />
+              previous year
+            </h4>
+            <p class="hero-pera">
+              Contrary to popular belief, Lorem Ipsum is not <br />
+              simply random text. It has roots in a piece of <br />
+              classical Latin literature from 45 BC, making it over <br />
+              2000 years old. Richard McClintock.
+            </p>
+            <div class="hero-list">
+              <ul>
+                <li><i class="fa-solid fa-check" style="color: #399726;"></i> Contrary to popular belief, is not simply.</li>
+                <li><i class="fa-solid fa-check" style="color: #399726;"></i> Contrary to popular belief.</li>
+                <li><i class="fa-solid fa-check" style="color: #399726;"></i> Contrary to popular , is not simply.</li>
+                <li><i class="fa-solid fa-check" style="color: #399726;"></i> Contrary to popular belief, is not simply.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
