icons and image with gradient color added

--- a/index.html
+++ b/index.html
@@ -52,13 +52,51 @@
             </p>
             <div class="hero-list">
               <ul>
-                <li><i class="fa-solid fa-check" style="color: #399726;"></i> Contrary to popular belief, is not simply.</li>
-                <li><i class="fa-solid fa-check" style="color: #399726;"></i> Contrary to popular belief.</li>
-                <li><i class="fa-solid fa-check" style="color: #399726;"></i> Contrary to popular , is not simply.</li>
-                <li><i class="fa-solid fa-check" style="color: #399726;"></i> Contrary to popular belief, is not simply.</li>
+                <li>
+                  <i class="fa-solid fa-check" style="color: #399726"></i>
+                  Contrary to popular belief, is not simply.
+                </li>
+                <li>
+                  <i class="fa-solid fa-check" style="color: #399726"></i>
+                  Contrary to popular belief.
+                </li>
+                <li>
+                  <i class="fa-solid fa-check" style="color: #399726"></i>
+                  Contrary to popular , is not simply.
+                </li>
+                <li>
+                  <i class="fa-solid fa-check" style="color: #399726"></i>
+                  Contrary to popular belief, is not simply.
+                </li>
               </ul>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="section-two">
+        <h4 class="section-two-heading">My Plans</h4>
+        <div class="section-image-container">
+          <div class="container-one">
+            <img src="images/icons/web.png" alt="" />
+            <h4 class="image-title">Web Development</h4><p class="mini-caption">I want to learn</p>
+          </div>
+          <div class="container-one">
+            <img src="images/icons/js.png" alt="" />
+            <h4 class="image-title">Javascript</h4><p class="mini-caption">I want to learn</p>
+          </div>
+          <div class="container-one">
+            <img src="images/icons/smoke.png" alt="" />
+            <h4 class="image-title">Smoking Habit</h4><p class="mini-caption">I want to end</p>
+          </div>
+          <div class="container-one">
+            <img src="images/icons/ecom.png" alt="" />
+            <h4 class="image-title">eCommerce</h4><p class="mini-caption">I want to start</p>
+          </div>
+        </div>
+      </section>
+      <section class="section-three">
+        <div class="section-img-container">
+            
         </div>
       </section>
     </main>
