button and heading style added

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
       </section>
       <section class="section-three">
         <div class="section-img-container">
-            
+            <h3 class="container-title">Awlays keep a positive <br> mindset</h3>
+            <button class="btn">Call Now</button>
+
         </div>
       </section>
     </main>
