--- a/index.html
+++ b/index.html
@@ -78,30 +78,60 @@
         <div class="section-image-container">
           <div class="container-one">
             <img src="images/icons/web.png" alt="" />
-            <h4 class="image-title">Web Development</h4><p class="mini-caption">I want to learn</p>
+            <h4 class="image-title">Web Development</h4>
+            <p class="mini-caption">I want to learn</p>
           </div>
           <div class="container-one">
             <img src="images/icons/js.png" alt="" />
-            <h4 class="image-title">Javascript</h4><p class="mini-caption">I want to learn</p>
+            <h4 class="image-title">Javascript</h4>
+            <p class="mini-caption">I want to learn</p>
           </div>
           <div class="container-one">
             <img src="images/icons/smoke.png" alt="" />
-            <h4 class="image-title">Smoking Habit</h4><p class="mini-caption">I want to end</p>
+            <h4 class="image-title">Smoking Habit</h4>
+            <p class="mini-caption">I want to end</p>
           </div>
           <div class="container-one">
             <img src="images/icons/ecom.png" alt="" />
-            <h4 class="image-title">eCommerce</h4><p class="mini-caption">I want to start</p>
+            <h4 class="image-title">eCommerce</h4>
+            <p class="mini-caption">I want to start</p>
           </div>
         </div>
       </section>
       <section class="section-three">
         <div class="section-img-container">
-            <h3 class="container-title">Awlays keep a positive <br> mindset</h3>
-            <button class="btn">Call Now</button>
-
+          <h3 class="container-title">
+            Awlays keep a positive <br />
+            mindset
+          </h3>
+          <button class="btn">Call Now</button>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-left">
+          <h5 class="left-footer-title">Future</h5>
+          <p class="left-footer-pera">
+            There are many variations of passages of Lorem Ipsum <br />
+            available, but the majority have suffered alteration in some <br />
+            form, by injected humour, or randomised words
+          </p>
+          <p>Email: exmple@gmail.com</p>
+          <p>Phone: 00 00 00</p>
+          <div class="social-icon">
+            <a href="#"><img src="images/icons/fb.png" alt="" /></a>
+            <a href="#"><img src="images/icons/twitter.png" alt="" /></a>
+            <a href="#"><img src="images/icons/youtube.png" alt="" /></a>
+          </div>
+        </div>
+        <div class="footer-right">
+            <h5 class="right-footer-title">Subscribe</h5>
+            <input type="email" value="Enter Your Email">
+            <button class="sbs-btn">Subscribe</button>
+
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
