--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
         <div class="footer-right">
             <h5 class="right-footer-title">Subscribe</h5>
-            <input type="email" value="Enter Your Email">
+            <input type="email" placeholder="Enter Your Email">
             <button class="sbs-btn">Subscribe</button>
 
         </div>
